{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "6411e772-dc15-43d5-8824-5ea179140460",
            "actions": [
                {
                    "name": "ControlArrows",
                    "type": "Value",
                    "id": "de2cadae-c0f1-4e10-ac27-42240d4c483f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ControlWS",
                    "type": "Value",
                    "id": "e2fd906a-599d-4786-b844-f22097445b55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "899b98df-1649-4f81-a219-73945b78d048",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlArrows",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3858782c-5ee1-462e-8809-cadc8fcc3497",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "702d786e-1733-44ff-938a-c07cde6491ec",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "49976c95-4dbb-47dc-af52-b227e9f27055",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlWS",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c3687e01-a8e5-433c-a011-6e5a8ebbd754",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlWS",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a9157a81-a999-4ab1-b750-a3cc1c46b397",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlWS",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Control",
            "id": "a562a39d-e59a-4cad-acf1-c613b775e3cd",
            "actions": [
                {
                    "name": "End",
                    "type": "Button",
                    "id": "ba014694-8d5d-4aea-97c0-1a858fc1d84c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e6bd710a-0273-4048-bbd6-d423dd41e872",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "End",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}